--- a/hw6.tex
+++ b/hw6.tex
@@ -271,10 +271,11 @@ In the following answer, denote $n$ as total days to detect, $k$ as total target
 * p[] is the input probability list, p[i] stores probability p_i of raining in i-th day, index from 0 to n, p[0] = 0
 * n is the observing days
 * k is the targeting days
-* in the following code, dp[i][j] stores the probability that i days have j days drought
+* in the following code, dp[i][j] stores the probability that i days have exactly j days drought
 **/
 float findProb(float[] p, int n, int k){
-	float[][] dp = new dp[n+1][n+1]; // +1 for extra 0 bases
+    if(k>n) return 0; // edge case
+	 float[][] dp = new dp[n+1][n+1]; // +1 for extra 0 bases
     set (n+1)*(k+1) all entry in dp[][] to 0;
     dp[0][0] = 0;
     dp[1][0] = p[1]; // 1 day AND 0 day drought = p_1
@@ -303,15 +304,15 @@ float findProb(float[] p, int n, int k){
 \begin{proof}[Correctness]{}
 The goal is to find the probability of more than $k$ days are drought in n days.
 
-\textbf{Analysis:} Let $X$ be the number of drought days, $P_n(X=i)$ be the probability of there are $i$ days drought in $n$ day, $R$ be the event of raining, $D$ be the event of drought. Notice that $R_i=D_i^c$.
+\textbf{Definition:} Let $X$ be the number of drought days, $P_i(X=j)$ be the probability of there are $j$ days drought in $i$ day, $R$ be the event of raining, $D$ be the event of drought. Notice that $R_i=D_i^c$.
 
 Since the raining and drought in each day is independent \[P_n(k<X\leq n) = P_n(X=k+1, X=k+2, ..., X= n)\] \[= P_n(X=k+1) + ... + P_n(X=n) = \sum_{j=k+1}^{n}P_n(X=j), k \leq n\]
 
 Notice that it is impossible to have k days drought in n days if $k>n$, therefore $P_n(X\leq n < k) = 0$ Since this is vacuously true to say the probability is zero, the following discussion will only focus on $k\leq n$ scenario.
 
-\textbf{Sub-problem:} Define the sub-problem $j$ to be finding the probability that there are exactly $j$ drought days in n days, $i\in[0,n]$.
+\textbf{Sub-problem:} Define the sub-problem $(i,j)$ to be finding the probability that there are exactly $j$ drought days in $i$ days, $i\in[0,n]$.
     
-\textbf{Recurrence Relation:} Define the probability of $j$ days drought in $i$ days,  $0\leq j<i\leq n$ as $P_i(X=j)$.
+\textbf{Recurrence Relation:} With the probability of $j$ days drought in $i$ days,  $0\leq j<i\leq n$ as $P_i(X=j)$.
 
 1. If $i$-th day is raining, then there have been $j$ days drought already in previous $i-1$ days.
 
@@ -361,29 +362,40 @@ We will prove along the way: dp[$i$][$j$] = $P_i(X=j)$ for all $ 0 \leq j < i \l
 
 \textbf{Inductive Cases:}
 
-1. dp[i][j] = $p_i \times$ dp[i-1][j] + $(1-p_i) \times$ dp[i-1][j-1] \textit{*by Assignment*} \\= $p_i P_{i-1}(X=j) + (1-p_i)P_{i-1}(X=j-1)$ \textit{*by Inductive Hypothesis, $i-1+i < i+j, i+j-2 < i+j$*}
+1. \texttt{dp[i][j]} = $p_i \times$ dp[i-1][j] + $(1-p_i) \times$ dp[i-1][j-1] \textit{*by Assignment*} \\= $p_i P_{i-1}(X=j) + (1-p_i)P_{i-1}(X=j-1)$ \textit{*by Inductive Hypothesis, $i-1+i < i+j, i+j-2 < i+j$*}
 \\= $P_i(X=j)$ \textit{*by Recurrence Relation*}
 
-2. dp[i][0] = $p_i \times$ dp[i-1][0] \textit{*by Assignment*}\\=  $p_i P_{i-1}(X=0)$ \textit{*by Inductive Hypothesis, $i-1 < n+k$*}\\= $P_i(X=0)$  \textit{*by Recurrence Relation*} for $2\leq i \leq n$ 
+2. \texttt{dp[i][0]} = $p_i \times$ dp[i-1][0] \textit{*by Assignment*}\\=  $p_i P_{i-1}(X=0)$ \textit{*by Inductive Hypothesis, $i-1 < n+k$*}\\= $P_i(X=0)$ for $2\leq i \leq n$ \textit{*by Recurrence Relation*}
 
-3. dp[i][i] = $(1-p_i) \times$ dp[i-1][i-1] \textit{*by Assignment*} \\= $p_i P_{i-1}(X=i-1)$ \textit{*by Inductive Hypothesis, $2i-2 < n+k$*} \\=   $P_i(X=i)$ \textit{*by Recurrence Relation*} for $2\leq i \leq n$
+3. \texttt{dp[i][i]} = $(1-p_i) \times$ dp[i-1][i-1] \textit{*by Assignment*} \\= $p_i P_{i-1}(X=i-1)$ \textit{*by Inductive Hypothesis, $2i-2 < n+k$*} \\=   $P_i(X=i)$ for $2\leq i \leq n$ \textit{*by Recurrence Relation*}
 
-4. Edge Case ($i>j$), dp[i][j] = 0 \textit{*By Assignment*} = $P_j(X=i)$ \textit{*By IH and Recurrence*}
+4. Edge Case ($i>j$), \texttt{dp[i][j]} = 0 \textit{*By Assignment*} = $P_j(X=i)$ \textit{*By IH and Recurrence*}
+
+Thus, \texttt{dp[i][j]} = $P_i(X=j)$. Therefore, for $0 \leq j \leq i \leq n, k \leq n$ 
+\begin{center}
+    \texttt{res =} $\sum_{i=k+1}^{n}$\texttt{dp[n][i]} = $\sum_{i=k+1}^{n}P_n(X=i) = P_n(k<X\leq n)$
+\end{center}
+
+Therefore, this concludes the proof since the algorithm return the probability that k days are drought in n days.
+
 \end{proof}
 \begin{proof}[Termination]{}
-    All for loop algorithm, vacuously true. It terminates.
+    All-for-loop algorithm, vacuously true. It terminates.
 \end{proof}
 
 \subsection*{Running Time}
+In this algorithm, all elementary calculation and assignment are considered $\mathcal{O}(1)$.
 
+Line 8 - 13 (except 10) take $\mathcal{O}(1)$ declaration and assignment. Line 10 take $\mathcal{O}(n^2)$ initialization for a $n\times n$ matrix. Line 15-18 take $\mathcal{O}(n)$ for looping through $\{2,3,...,n\}$. Line 21 - 23 (inner for loop) take $\mathcal{O}(i)$. Line 20 - 24 take $\sum_{i=1}^{n}\mathcal{O}(i) = \mathcal{O}(n^2)$. Line 25 - 27 take $\mathcal{O}(n)$ for looping from $\{k+1,...,n\}$. Therefore, the running time of algorithm is
+\[T(n) = 3\mathcal{O}(n) + 2\mathcal{O}(n^2) = \mathcal{O}(n^2)\]
 
 
 \section*{Problem2}
 
 \subsection*{Algorithm}
-In the following answer, $G = (V,E)$ is the directed graph we will discuss and $x=x_1x_2\cdots x_T$ is the string to compute. Denote $|V|$ as $n$, $|E|$ as $m$, size of $x$ as $T$, starting node as $s$, $e(u,v)$ as an edge $u \rightarrow v$, $u,v\in V$. We store a 2D array \texttt{a[][]}. For convenience, all nodes have a unique corresponding index to store in a[v][k], $v\in V, k\in [0, T]$.
+In the following answer, $G = (V,E)$ is the directed graph we will discuss and $x=x_1x_2\cdots x_T$ is the string to compute. Denote $|V|$ as $n$, $|E|$ as $m$, size of $x$ as $T$, starting node as $s$, $e(u,v)$ as an edge $u \rightarrow v$, $u,v\in V$. We store a 2D array \texttt{a[][]}. For convenience, all nodes have a unique corresponding index to refer back to a[$v$][$t$], $v\in V, t\in [0, T]$.
 
-For each node $v\in V$, v stores array q[] for the likelihood of outputting a letter from 'a' to 'z'; and p[] for the likelihood of picking an out-going edge to another node: v.q[$x_i$] is the probability of node $v$ output $x_i, i\in [1...T], x_i\in \{'a','b', \cdots, 'z'\}$; v.p[u] is the probability of node v goes to $u \neq v, u \in V$ through an out-going edge $e(v,u)$, if no such $e$ then probability is 0. 
+For each node $v\in V$, $v$ stores an array q[] for the likelihood of outputting a letter from 'a' to 'z'; and an p[] for the likelihood of picking an out-going edge to another node: $v$.q[$x$] is the probability of node $v$ output $x, x \in \{'a','b', \cdots, 'z'\}$; $v$.p[$u$] is the probability of node v goes to $u \neq v, u \in V$ through an out-going edge $e(v,u)$, if no such $e$ then $v$.p[$u$] = 0. 
 
 \begin{proof}[Algorithm]{}
 		\renewcommand{\qedsymbol}{}
@@ -404,18 +416,20 @@ float findProb2(Graph G, String x){
     T := size of x;
     initialize a 2D array a[n][T], set each place to 0;
     a[s][1] = s.q[x[1]];
-    for(int k = 2; k <= T; k++){
+    for(int t = 2; k <= T; k++){
         for(all node v in V){
             vector<float> temp; // help find max item
-            for(all node u S.T e(u,v) exists){
-                temp.push_back(a[u][k-1] * u.p[v] * s.q[x[k]]);
+            
+            // find max probability for v
+            for(all node u S.T e(u,v) exists){ // u->v
+                temp.push_back(a[u][t-1] * u.p[v] * s.q[x[t]]);
             }
-            a[v][k] = max_element(temp.begin(), temp.end())
+            a[v][t] = max_element(temp.begin(), temp.end())
         }
     }
     float res = 0;
     for(all node v in V){
-        if(a[v][k] > res) res = a[v][k];
+        if(a[v][T] > res) res = a[v][T];
     }
     return res;
 }
@@ -424,27 +438,29 @@ float findProb2(Graph G, String x){
 		\end{lstlisting} 
 \end{proof}
 
-
-
-\begin{proof}[Explanation]{}
-		\renewcommand{\qedsymbol}{} % hide the QED square
-       
-\end{proof}
-
 \subsection*{Proof}
-\begin{proof}[Correctness]{}
-    
-    
-\textbf{Goal:} 
+\begin{proof}[Correctness]{} The goal is to find the maximum likelihood of any vertex sequence for the given string.
 
-\textbf{Analysis:} 
+\textbf{Definition:} In the algorithm above,  $\forall v,u\in V, v\neq u$ we use $v$.p[$u$] to represent the probability that node $v$ goes to next node $u$. In the discussion below, we will use $p_{v_t,(v_t,v_{t+1})}$ to represent the likelihood of node $v_t$ going to next node $v_{t+1}$, $ t=\{1,2,...,T-1\}$. Similarly, we use $q_{v_t,x_t}$ replace $v.$q[x[t]] and represent the probability of node $v_t$ writing down $x_t$. 
+By definition, the likelihood of a sequence $\langle v_1,v_2,...,v_T \rangle$ to output $x=x_1x_2\cdots x_T$
+\[L(\langle v_1,v_2,...,v_T \rangle) = \prod_{t=1}^{T}q_{v_t,x_t} \cdot \prod_{t=1}^{T-1}p_{v_t,(v_t,v_{t+1})}  \]
+In this system, we fix the starting vertex $v_1$ as $s$.
     
-\textbf{Subproblem:}
+\textbf{Sub-problem:} Define the sub-problem $t$ as finding the maximum likelihood of any vertex sequence for the given string $x_1x_2\cdots x_t$.
+    
+\textbf{Recurrence Relation:} Focusing on the likelihood of any vertex sequence for $x_1\cdots x_t$:
 
-    
-\textbf{Recurrence Relation:}
-    
-    
+\[L(\langle v_1,v_2,...,v_t \rangle)=
+\prod_{t=1}^{t}q_{v_i,x_i} \cdot \prod_{t=1}^{t-1}p_{v_i,(v_i,v_{i+1})}\]
+\[=q_{v_1,x_1}\cdot q_{v_2,x_2} \cdot ... \cdot q_{x_t, x_t} \cdot p_{v_1,(v_1, v_2)} \cdot ...\cdot p_{v_{t-1},(v_{t-1}, v_{t})}=\prod_{t=1}^{t-1}q_{v_i,x_i} \cdot \prod_{t=1}^{t-2}p_{v_i,(v_i,v_{i+1})} \cdot q_{v_t,x_t} \cdot p_{v_{t-1},(v_{t-1},v_t)}\]
+
+\[= L(\langle v_1,v_2,...,v_{t-1} \rangle)\cdot q_{v_t,x_t} \cdot p_{v_{t-1},(v_{t-1},v_t)} \]
+
+Therefore, the maximum likelihood of any vertex sequence of $x_1\cdots x_t$ by fixing vertex $v_t$ as the last vertex in the sequence is
+
+\[\mathop{\max}_{v_t\in V} \Bigg[ L(\langle v_1,v_2,...,v_{t} \rangle) \Bigg] = \mathop{\max}_{v_{t-1},v_t\in V} \Bigg[ L(\langle v_1,v_2,...,v_{t-1} \rangle) \cdot q_{v_t,x_t} \cdot p_{v_{t-1},(v_{t-1},v_t)} \Bigg] \]
+
+
 \textbf{Base Case:}
     
     
